--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -47,7 +47,7 @@ body {
 }
 
 //------------------------------------------------------------------------------
-// Header with logo, searchbar and switchers
+// Header with logo, searchbar
 //------------------------------------------------------------------------------
 
 header {
