--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -377,7 +377,7 @@ header {
 }
 
 //------------------------------------------------------------------------------
-// Navigation - "On This Page" local toctree
+// Navigation - "Trên trang này" local toctree
 //------------------------------------------------------------------------------
 
 aside.o_page_toc {
